top headerdeki sehvler duzeldildi

--- a/src/components/Header1.css
+++ b/src/components/Header1.css
@@ -1,59 +1,72 @@
-.header-content{
-    background-color: #fff;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .header-content .search-icon {
-    margin-right: 300px;
-  
-  }
+.header-content {
+  background-color: #fff;
+  padding: 5px;
+  display: flex;
+  align-items: center;
 
-  .header-content h1 {
-    margin-left: 300px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
 
-  .header-cotent .basket-icon {
-    margin-left: 100px;
-  
-  }
 
-  .header-cotent .account-icon {
-    margin-right: 400px;
-  
-  }
-  
-  .header nav link {
-    color: #fff;
-    margin-right: 30px;
-    text-decoration: none;
-  
-  
-  }
-  
-  .start-free-trial {
-    display: flex;
-    /* justify-content: space-between; Logo və bars arasında məsafəni bərabər edir */
-    /* align-items: center; Dikey olaraq ortalayır */
-  
-  }
-  
-  .Log-in {
-    background-color: #002D2D;
-  }
-  
-  
-  header nav {
-    display: none;
-  
-  }
-  
-  header button {
-    background-color: #008060;
-    color: #fff;
-    padding: 15px 30px;
-    border-color: transparent;
-    border-radius: 5px;
-    display: none;
-  }
+
+.header-top-container{
+ 
+  padding: 20px 20px;
+  border-bottom: 1px solid #0000001A;
+}
+
+
+
+.header nav link {
+  color: #fff;
+  margin-right: 30px;
+  text-decoration: none;
+
+
+}
+
+.start-free-trial {
+  display: flex;
+  /* justify-content: space-between; Logo və bars arasında məsafəni bərabər edir */
+  /* align-items: center; Dikey olaraq ortalayır */
+
+}
+
+.Log-in {
+  background-color: #002D2D;
+}
+
+
+header nav {
+  display: none;
+
+}
+
+header button {
+  background-color: #008060;
+  color: #fff;
+  padding: 15px 30px;
+  border-color: transparent;
+  border-radius: 5px;
+  display: none;
+}
+
+.header-icon-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.header-icon {
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+.avion{
+  text-decoration: none;
+  color: #22202E;
+  font-size: 24px;
+}
