--- a/src/components/Header2/Header2.css
+++ b/src/components/Header2/Header2.css
@@ -10,4 +10,12 @@
     
   }
 
-  
+  .header2-links a{
+    color: #726E8D;
+    font-size: 16px;
+    text-decoration: none;
+  }
+ .header-comp{
+ 
+  padding: 0 100px;
+ }
