--- a/src/components/Ceramiccards/Ceramiccards.css
+++ b/src/components/Ceramiccards/Ceramiccards.css
@@ -1,3 +1,24 @@
+.ceramic-title{
+    color: #2A254B;
+    font-size: 32px;
+    font-weight:400;
+}
 .ceramiccard-container{
-    
+    padding: 0 60px 60px;
+}
+.ceramic-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+.ceramic-button button{
+    height: 56px;
+    width: 170px;
+    background-color: #F9F9F9;
+   font-size: 16px;
+   color: #2A254B;
+   border: none;
+   outline: none;
+   cursor: pointer;
 }
