--- a/src/components/Brandcards/BrandCards.css
+++ b/src/components/Brandcards/BrandCards.css
@@ -20,3 +20,13 @@
     font-size: 16px;
     color: #2A254B;
 }
+
+
+@media (min-width: 320px) and (max-width: 767px) {
+  
+    .brandcard-container img{
+      width: 20px;
+      height: 20px;
+    }
+
+  }
