--- a/src/components/London/London.css
+++ b/src/components/London/London.css
@@ -1,7 +1,4 @@
 
-.London{
-    margin: 50px 0;
-  }
   .london-left-side{
     background-color:#fff;
     color: #000;
@@ -11,8 +8,11 @@
   }
   
   .London h1 {
-    padding: 40px 60px;
-    font-size: 32px;
+    padding: 10px 60px;
+    font-size: 24px;
+    font-weight: 400;
+    color: #2A254B;
+
   }
 
   .london-left-side .get-intouch {
@@ -26,12 +26,17 @@
     cursor: pointer;
   
   }
-  
-  .london-left-side h5{
-    padding: 60px;
-    font-size: 18px;
+  .london-left-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+  }
+  .london-left-side p{
+    padding: 10px 60px;
+    font-size: 16px;
    font-weight: 400;
-  
+   color: #505977;
   }
   .london-right-side{
     width: 40%;
@@ -52,79 +57,38 @@
 
   }
 
-  @media (min-width: 320px) and (max-width:767px) {
-  
-    .London{
-      margin:  0;
-    }
-    .london-container {
-      flex-direction: column; 
-      align-items: center; 
-    }
-  
-    .london-left-side{
-      flex: none; 
-      width: 100%;
-  
-    
-    }
-
-    .london-left-side{
-      background-color:#2A254B;
-      color: #fff;
-      width: 100%;
-      height: 500px;
-      display: flex;
-      flex-direction: column;
+  @media (min-width: 320px) and (max-width: 767px) {
    
-    }
     
-    .London h1 {
-    
-      padding: 20px;
-      margin: 0;
-      font-size: 32px;
-      font-weight: 400;
-      margin-top: 50px;
-    }
-  
-    .london-left-side .view-collect {
-      background-color:#F9F9F926;
-      color: #fff;
-      padding: 15px 30px;
-      border-color: transparent;
-      margin-top: 20px;
-      margin-left: 6px;
-      margin-bottom: 80px;
-      cursor: pointer;
-    
-    }
-    
-    .london-left-side h5{
-      margin: 0;
-      margin-top: 50px;
-      font-size: 15px;
-     font-weight: 400;
-     order: 2;
-     padding: 20px;
-
-    }
-    .london-right-side{
-      display: none;
-    }
-  
-
-  
     .london-container{
-     
-      height: 584px;
-      display: flex;
-  
+      flex-direction: column;
+      height: auto;
+
     }
-    .view-collect{
-      order: 3;
-      margin-top: 200px;
-      margin-left: 0;
-      margin-bottom: 0;
-    }
+    .london-left-side {
+      width: 100%;
+  }
+  .london-right-side{
+   width: 100%;
+  }
+  .London h1 {
+    padding: 10px ;
+   
+
+  }
+  .london-left-side .get-intouch {
+    
+  margin: 0;
+width: 100%;
+margin-bottom: 10px;
+  }
+  .london-left-side p{
+    padding: 10px ;
+   
+  }
+  .london-left-side {
+
+    align-items: center;
+  }
+
   }
