--- a/src/components/Popularcards/Popularcards.css
+++ b/src/components/Popularcards/Popularcards.css
@@ -40,7 +40,7 @@
     width: 630px; 
   }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 1180px) {
     .popularcards-container{
         flex-direction: column; 
     }
@@ -55,5 +55,6 @@
       img{
         width: 100%;
         height: 250px;
+        object-fit: fill;
       }
   }
