--- a/src/components/About/Title/Title.css
+++ b/src/components/About/Title/Title.css
@@ -33,7 +33,7 @@
   .title-container {
     display: flex; /* Use Flexbox layout */
     align-items: center; /* Vertically align items */
-    justify-content: center; /* Horizontally align items */
+    justify-content: space-around; /* Horizontally align items */
     margin: 0 auto; /* Center the container itself */
     padding: 88px 0; /* Add some spacing */
     gap: 20px; /* Space between items */
@@ -49,7 +49,18 @@
     background-color: #F9F9F9;
     color: #000;
     padding: 15px 30px;
-    margin-left: 288px;
+
     border-color: transparent;
     cursor: pointer;
+  }
+
+  @media (min-width: 320px) and (max-width:767px) {
+    .title-container {
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
+      margin: none;
+    }
+   
+    
   }
