--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,20 +1,28 @@
 .blog-container {
-    max-width: 800px;
+    
     margin: auto;
     padding: 20px;
   }
-  
-  .blog-list {
+  .blog-title{
     display: flex;
     flex-direction: column;
+    align-items: center;
+  }
+  .blog-list {
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
+    padding: 30px 0;
   }
   
   .blog-card {
+    width: 40%;
     padding: 15px;
     border-radius: 10px;
     background: #f9f9f9;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
   }
   
   .blog-card h2 {
@@ -45,6 +53,7 @@
   
   .blog-post-container h1 {
     margin-bottom: 10px;
+
   }
   
   .back-link {
