ana sehife mobil responsive

--- a/src/components/Brandcards/BrandCards.css
+++ b/src/components/Brandcards/BrandCards.css
@@ -24,3 +24,13 @@
     width: 20px;
     height: 20px;
   }
+
+
+@media (min-width: 320px) and (max-width:767px){
+    .brandcard-container{
+       
+       padding:10px;
+    }
+
+
+}
