--- a/src/components/Products/Productscards/Productscards.css
+++ b/src/components/Products/Productscards/Productscards.css
@@ -35,6 +35,17 @@
 .Productscard {
     width: 300px;
     cursor: pointer;
+
+  }
+  .card-body-image img{
+    width: 100%;
+    height: 100%;
+  }
+  .card-body-image {
+
+    height: 250px;
+    width: 100%;
+
   }
   .filter-container{
     display: flex;
