--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -2,6 +2,7 @@
     
     margin: auto;
     padding: 20px;
+   
   }
   .blog-title{
     display: flex;
@@ -14,6 +15,7 @@
     gap: 20px;
     justify-content: center;
     padding: 30px 0;
+    align-items: center;
   }
   
   .blog-card {
@@ -138,3 +140,52 @@
   color: #666;
   font-style: italic;
 }
+@media screen and (max-width: 800px) {
+  .blog-list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .blog-card {
+    width: 90%; 
+    padding: 10px;
+  }
+
+  .blog-card h2 {
+    font-size: 20px; 
+  }
+
+  .date, .author {
+    font-size: 14px; 
+  }
+
+  .read-more {
+    font-size: 16px;
+  }
+
+  .image {
+    height: 200px;
+  }
+
+  .image-detail {
+    height: 350px;
+  }
+
+  .blog-details-container {
+    padding: 15px;
+  }
+
+  .blog-header h1 {
+    font-size: 24px;
+  }
+
+  .blog-content h2 {
+    font-size: 20px;
+  }
+
+  .blog-text {
+    font-size: 16px;
+  }
+}
+
+
