--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -9,6 +9,31 @@
   align-items: center;
   
 }
+.basket-icon {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.cart-count {
+  position: absolute;
+  top: -15px; 
+  right: -18px; 
+  background: black; 
+  color: white;
+  font-size: 14px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border: 2px solid white; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
 
 
 
@@ -17,6 +42,13 @@
   padding: 20px 20px;
   border-bottom: 1px solid #0000001A;
 }
+.basket-icon {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
 
 
 .header-icon-container {
