--- a/src/components/Popularcards/Popularcards.css
+++ b/src/components/Popularcards/Popularcards.css
@@ -38,7 +38,14 @@
   .popularcard:first-child {
     width: 630px; 
   }
+.view-collectt{
+  background-color:#F9F9F926;
+  color: #fff;
+  padding: 15px 30px;
+  border-color: transparent;
 
+  cursor: pointer;
+}
 @media (min-width: 320px) and (max-width: 1180px) {
     .popularcards-container{
         flex-direction: column; 
@@ -49,7 +56,7 @@
     .popularcard-container{
  
       padding: 10px;
-    border: 1px solid;
+  
 
   }
   form{
