--- a/src/components/Footers/Footes.css
+++ b/src/components/Footers/Footes.css
@@ -70,6 +70,11 @@
   .footer .footer-button{
      background-color: white;
      color: #2A254B;
+     padding: 0;
+     width: 100px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
   }
 
   .alt-footer h2{
@@ -83,7 +88,6 @@
    }
   @media (min-width: 320px) and (max-width: 1000px) {
   
-    
     .ust-footer{
 
       display: flex;
@@ -94,6 +98,13 @@
     }
     .footer input{
       width: 150px;
+      height: 40px;
+      padding: 0;
+      padding-left: 5px;
+     }
+     .footer-button{
+      height: 42px;
+      padding: 0;
      }
      .alt-footer{
      flex-direction: column;
