--- a/src/components/Ceramiccards/Ceramiccards.css
+++ b/src/components/Ceramiccards/Ceramiccards.css
@@ -4,7 +4,8 @@
     font-weight:400;
 }
 .ceramiccard-container{
-    padding: 0 60px 60px;
+    padding: 0 60px ;
+  
 }
 .ceramic-button{
     display: flex;
