--- a/src/components/About/Idea/Idea.css
+++ b/src/components/About/Idea/Idea.css
@@ -61,7 +61,9 @@
       flex-direction: column; 
       align-items: center; 
     }
-  
+    .view-center{
+      text-align: center;
+    }
     .idea-left-side{
       flex: none; 
       width: 100%;
