--- a/src/components/Footers/Footes.css
+++ b/src/components/Footers/Footes.css
@@ -64,7 +64,8 @@
   }
 
   .footer input{
-   width: 500px;
+   width: 300px;
+   height: 30px;
    background-color: #FFFFFF26;
   }
   .footer .footer-button{
@@ -86,7 +87,7 @@
     width: 20px;
     height: 20px;
    }
-  @media (min-width: 320px) and (max-width: 1000px) {
+  @media (min-width: 320px) and (max-width: 700px) {
   
     .ust-footer{
 
@@ -96,14 +97,59 @@
 
     
     }
+    .footer-form{
+      display: flex;
+      justify-content: center;
+   
+     
+    }
+   
     .footer input{
-      width: 150px;
-      height: 40px;
+      width: 200px;
+      height: 50px;
       padding: 0;
       padding-left: 5px;
+     
      }
      .footer-button{
-      height: 42px;
+      height: 52px;
+      padding: 0;
+     }
+     .alt-footer{
+     flex-direction: column;
+    }
+  
+.footer{
+  padding: 0;
+}
+  }
+
+  @media (min-width: 700px) and (max-width: 1200px) {
+  
+    .ust-footer{
+
+      display: flex;
+      flex-direction: row;
+      padding: 10px 20px;
+
+    
+    }
+    .footer-form{
+      display: flex;
+      justify-content: center;
+   
+     
+    }
+   
+    .footer input{
+      width: 200px;
+      height: 50px;
+      padding: 0;
+      padding-left: 5px;
+     
+     }
+     .footer-button{
+      height: 52px;
       padding: 0;
      }
      .alt-footer{
