--- a/src/components/About/AboutForm/AboutForm.css
+++ b/src/components/About/AboutForm/AboutForm.css
@@ -3,7 +3,10 @@
     background-image: url("../../../assets/images/aboutpng.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
- 
+    margin: 100px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -43,7 +46,8 @@ margin-top: 40px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+
+
 }
 .bene-side1 h1{
   color: #fff;
@@ -104,7 +108,7 @@ margin-top: 40px;
   .aboutform-container{
     height: auto;
     padding: 0 10px ;
-  
+    margin: 30px 0;
  
 }
  
