--- a/src/components/Productdetail/DandyChair/Dandy.css
+++ b/src/components/Productdetail/DandyChair/Dandy.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40px;
+  padding: 100px 60px;
 }
 
 .Dandy-container {
@@ -13,6 +13,7 @@
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+
 }
 
 .Dandy-right-side {
