--- a/src/components/Contact/ContactForm.css
+++ b/src/components/Contact/ContactForm.css
@@ -1,28 +1,16 @@
 
-.contact-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background: #0e1730;
-  color: white;
-  padding: 50px;
-  border-radius: 10px;
-  max-width: 900px;
-  margin: 100px auto;
-}
 
-.contact-left {
-  flex: 1;
-  padding: 20px;
-}
+
 
 .contact-left h2 {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
 }
-
+.social-links a{
+  font-size: 24px;
+  color:#0e1730
+}
 .contact-left p {
   font-size: 16px;
   margin-bottom: 15px;
@@ -45,25 +33,12 @@
 }
 
 
-.contact-form {
-  flex: 1;
-  background: white;
-  color: black;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
 
 
-.input-group {
-  display: flex;
-  flex-direction: column;
-}
 
-input,
+
+
+ .contact-form input,
 textarea {
   width: 100%;
   padding: 12px;
@@ -107,7 +82,10 @@ textarea:focus {
   background: #1577cc;
 }
 
-
+.contact-section{
+  padding:100px 0;
+  
+}
 @media (max-width: 768px) {
   .contact-container {
     flex-direction: column;
@@ -118,4 +96,87 @@ textarea:focus {
   .contact-left {
     text-align: center;
   }
+  .contact-section{
+    padding:20px 0;
+    
+  }
+}
+
+.error {
+  color: red;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+}
+
+.contact-section {
+  font-family: "Open Sans", sans-serif;
+}
+
+.contact-bg {
+  height: 40vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../../assets/images/contact-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-bg h3 {
+  font-size: 1.3rem;
+}
+
+.contact-bg h2 {
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+.line {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.line div {
+  height: 3px;
+  width: 70px;
+  background: #0e1730;
+  margin: 0 5px;
+}
+
+.contact-info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
+  padding: 2rem 0;
+}
+
+.contact-info div {
+  margin: 1rem;
+}
+
+
+
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.send-btn {
+  background: #f7327a;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.send-btn:hover {
+  opacity: 0.8;
 }
