--- a/src/components/Products/Title.css
+++ b/src/components/Products/Title.css
@@ -2,10 +2,14 @@
 .title-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+ 
   
 }
+ .title-right-side{
 
+    height: 100%;
+    width: 100%;
+}
 
 
 
