--- a/src/components/Contact/ContactForm.css
+++ b/src/components/Contact/ContactForm.css
@@ -1,4 +1,8 @@
+.contact-section{
+  padding:0 0 100px 0;
 
+  
+}
 
 
 
@@ -32,27 +36,34 @@
   text-decoration: underline;
 }
 
+.contact-form {
+  display: flex;
+  justify-content: center;
+  padding: 50px 0;
+}
 
+.contact-form form {
+  width: 60%;
 
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 
+}
 
 
 
  .contact-form input,
 textarea {
-  width: 100%;
-  padding: 12px;
+
+  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 14px;
   transition: border-color 0.3s;
-}
-
-input:focus,
-textarea:focus {
-  border-color: #1e90ff;
   outline: none;
 }
+
 
 
 .input-error {
@@ -66,7 +77,7 @@ textarea:focus {
 }
 
 
-.send-button {
+.send-btnn {
   background: #1e90ff;
   color: white;
   border: none;
@@ -78,21 +89,30 @@ textarea:focus {
   transition: background 0.3s;
 }
 
-.send-button:hover {
+.send-btnn:hover {
   background: #1577cc;
 }
-
-.contact-section{
-  padding:100px 0;
-  
+.contact-bg p{
+  padding: 0 10px;
 }
+
 @media (max-width: 768px) {
+
+
+
   .contact-container {
     flex-direction: column;
     padding: 20px;
     margin: 50px auto;
   }
-
+  .contact-form form {
+    width: 100%;
+  
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  
+  }
   .contact-left {
     text-align: center;
   }
@@ -113,7 +133,7 @@ textarea:focus {
 }
 
 .contact-bg {
-  height: 40vh;
+  height: auto;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../../assets/images/contact-bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -127,11 +147,11 @@ textarea:focus {
 }
 
 .contact-bg h3 {
-  font-size: 1.3rem;
+  font-size: 14px;
 }
 
 .contact-bg h2 {
-  font-size: 3rem;
+  font-size: 30px;
   text-transform: uppercase;
 }
 
@@ -150,7 +170,7 @@ textarea:focus {
 
 .contact-info {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   text-align: center;
   padding: 2rem 0;
 }
